@@ -1,0 +1,10 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::AlpnSelect : interface_t {
+  use Net::SSLeay;
+  use Net::SSLeay::SSL_SESSION;
+  
+  required method : int ($ssl : Net::SSLeay, $out_ref : string[], $outlen_ref : int*, $in : string, $inlen : int, $arg : object);
+  
+}
