@@ -22,6 +22,8 @@ class Net::SSLeay::SSL_CTX : pointer {
   use Net::SSLeay::Callback::PskClient;
   use Net::SSLeay::Callback::PskServer;
   use Net::SSLeay::Callback::TlsextTicketKey;
+  use Net::SSLeay::Callback::AlpnSelect;
+  
   use Sync::Mutex;
   
   # Class Variables
